fixed some overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ footer p{
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(0,0,0,0.6) 100%);
+  background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(0,0,0,0.8) 100%);
   animation: gradient 5s ease;
 }
 
@@ -385,7 +385,7 @@ input[type=text], input[type=email], textarea {
   }
   main h1{
     font-size: 2em;
-    padding-top: 5%;
+    padding-top: 8%;
   }
   .page-intro{
     margin: auto;
@@ -680,7 +680,7 @@ input[type=text], input[type=email], textarea {
   .flipcard:hover .flipcard-inner {
     transform: rotateY(180deg);
   }
-  #more-caption{
+  .caption{
     display: none;
   }
   .flipcard-front, .flipcard-back {
@@ -700,7 +700,7 @@ input[type=text], input[type=email], textarea {
     line-height: 2;
     font-weight: 600;
     align-items: center; 
-    padding: 0 10% 0 10%;
+    padding: 5% 10% 5% 10%;  
   }
   .flipcard-back {
     border-radius: 20px;
@@ -713,6 +713,7 @@ input[type=text], input[type=email], textarea {
   /* contact me */
   form{
     width: 700px;
+    padding: 0 8% 0 8%;
   }
   #contact-container h1{
     padding-bottom: 2%;
@@ -773,14 +774,21 @@ input[type=text], input[type=email], textarea {
 
 /* for accessibility */
 @media (prefers-reduced-motion: reduce){
+  main{
+    background-attachment: inherit !important;
+  }
   *{
      animation: none !important;
      transition: none !important;
    }
-
-
    .fullscreen-scroll a span::before {
     animation: none;
+  }
+  #neo-impress::after, #post-impress::after, #impressionism::after{
+    animation: none;
+  }
+  *:hover{
+    transform: none !important;
   }
  
  }
